--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 		<link rel="stylesheet" href="./stylesheets/color.css">
 
 		<link rel="stylesheet" href="./stylesheets/prism.css">
+		<link rel="stylesheet" href="./stylesheets/prism-line-numbers.css">
 	  <link rel="stylesheet" href="./stylesheets/codeflask.css">
 		<link rel="stylesheet" href="./stylesheets/app.css">
-		
+
 		<script src="./js/prism.js" async></script>
-	  <script src="./js/codeflask.js" async></script>		
-		
+		<script src="./js/prism-line-numbers.js" async></script>
+	  <script src="./js/codeflask.js" async></script>
+
 		<script src='./js/ironscript.js'></script>
 		<script src='./app.iron.js'></script>
   </head>
