added page loading animation

--- a/index.html
+++ b/index.html
@@ -25,5 +25,23 @@
 	  ga('create', 'UA-96091535-1', 'auto');
 	  ga('send', 'pageview');
 		</script>
-  </head>
+	</head>
+
+	<body id="app-body">
+		<section class="hero is-warning is-fullheight">
+			<div class="hero-body">
+				<div class="container has-text-centered">
+					<img class="image inb is-32x32 margin-10" src="./assets/logo.png">
+					<p class="has-text-centered">
+						Powered by <strong>Ironscript</strong>
+					</h1>
+					<div class="has-text-centered">
+						<div class="loader-bar inb">
+							<div class="loader-bar-thumb"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
