added meta to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html id="app-root">
   <head>
-		<title> Ironscript </title>
+		<title>Ironscript: An Async Functional Programming Language for the Web</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Ironscrupt is an Asynchronous Functional Programming Language built over Javscript for Rapid Web Application Development">
+		<meta name="keywords" content="JavaScript,Async,Asynchronous,Functional,Modular,LISP,Scheme,Rapid,Web,Website,Development,Programming,Language">
+		<meta name="author" content="Ganesh Prasad (gnsp.ironscript@gmail.com)">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
 		<link rel="stylesheet" href="./stylesheets/bulma.css">
 		<link rel="stylesheet" href="./stylesheets/fa/css/fa.min.css">
 		<link rel="stylesheet" href="./stylesheets/color.css">
